@@ -1,3 +1,8 @@
+2000-11-11  Havoc Pennington  <hp@pobox.com>
+
+	* gconf/gconf-value.c (gconf_entry_set_is_writable): Add this
+	function
+
 2000-11-05  Havoc Pennington  <hp@pobox.com>
 
 	* gconf/gconf-glib.c, gconf/gconf-glib-private.h: Remove the 
